manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovannlyna-demo-api-service
spec:
  type: NodePort
  selector:
    app: sovannlyna-demo-api
  ports:
    - protocol: TCP
      port: 8298
      targetPort: 8080
