manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sovannlyna-demo-api-https-ingress
  namespace: sovannlyna-demo-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sovannlyna-demo-api.assessify.org
      secretName: sovannlyna-demo-api-secret-tls
  rules:
    - host: sovannlyna-demo-api.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sovannlyna-demo-api-service
                port:
                  number: 8298
